# 15-418-Project

./: .gitignore  CMakeLists.txt  README.md
doc/: how2run.txt  misc.txt  q.txt
src/: CMakeLists.txt  linear_programming_par.h  linear_programming_seq.cpp  linear_programming_seq.h
src/flow/parallel/: CMakeLists.txt  flow_par.cpp  flow_par.h
src/flow/sequential/: CMakeLists.txt  flow_seq.cpp  flow_seq.h
src/simplex/parallel/: CMakeLists.txt  linear_programming_par.cpp  lp_factory.cpp  lp_par.cpp  lp_par.h  lp_par1.cpp  lp_par1.h  lp_par1.txt  lp_par_template.cpp  lp_par_template.h
src/simplex/sequential/: CMakeLists.txt  linear_programming_seq.cpp  linear_programming_seq.h  lp_seq.cpp  lp_seq.h
tests/: CMakeLists.txt  flow.cpp  flow_mpi.cpp  main.cpp  main_mpi.cpp
tests/test_data/: lp_seq.ans  lp_seq.in
tests/test_data/flow/: flow_easy.ans  flow_easy.in  flow_hard.ans  flow_hard.in  flow_medium.in  generate_tc.cpp  runtime.txt
